Altera estilização das páginas

--- a/web_chat_messenger/wwwroot/cadastro.html
+++ b/web_chat_messenger/wwwroot/cadastro.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="css/main.css" />
-        <title>ZapWeb</title>
+        <title>Chat Messenger</title>
         <style type="text/css">
             body {
-                background-color: #32A060;
+                background-color: #5C158D;
             }
             input[type=text] {
                 max-width: 690px;
@@ -15,7 +15,7 @@
 <body>
     <div class="container-login">
         <img src="imagem/logo.png" />
-        <h1>ZapWeb</h1>
+        <h1>Chat Messenger</h1>
         <div class="container-form">
             <input type="text" placeholder="Nome" />
 			<br />
